--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   json_serializable: 6.9.0
   get_it: ^8.0.3
   flutter_bloc: ^9.1.1
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
