--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.5.1
   hive_generator: ^2.0.1
+  mocktail: ^1.0.4
+  bloc_test: ^10.0.0
+  test_cov_console: ^0.2.2
 
 flutter:
   uses-material-design: true
