--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   get_it: ^8.0.3
   flutter_bloc: ^9.1.1
   hive: ^2.2.3
+  cached_network_image: ^3.4.1
+  sqflite_common_ffi: ^2.3.6
 
 dev_dependencies:
   flutter_test:
