--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   hive: ^2.2.3
   cached_network_image: ^3.4.1
   sqflite_common_ffi: ^2.3.6
+  socket_io_client: ^3.1.2
 
 dev_dependencies:
   flutter_test:
