--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   sqflite_common_ffi: ^2.3.6
   socket_io_client: ^3.1.2
   sensors_plus: ^6.1.1
+  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_test:
